syntax = "proto3";

option go_package = "datamodel";

package datamodel;

message VantagePoint {
    string hostname    =  1;
    uint32 ip          =  2;
    bool sshable       =  3;
    bool timestamp     =  4;
    bool record_route  =  5;
    bool active        =  6;
    int64 last_updated =  7;
    bool can_spoof     =  9;
    uint32 controller  = 10;
    bool receive_spoof = 11;
}

message VPRequest {
    string hostname = 1;
    int64 ip        = 2;
}

message VPReturn {
    repeated VantagePoint vps = 1;
}
